--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "gh-pages": "^6.3.0",
     "jest": "^29",
     "postcss": "^8.5",
     "prettier": "^3",
