build configuration changed

--- a/package.json
+++ b/package.json
@@ -3,17 +3,16 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
-"scripts": {
-  "dev": "next dev",
-  "lint": "next lint",
-  "start": "next start",
-  "build": "next build && next export",
-  "export": "next export",
-  "deploy": "gh-pages -d out",
-  "format": "prettier --write .",
-  "test": "jest"
-},
-
+  "scripts": {
+    "dev": "next dev",
+    "lint": "next lint",
+    "start": "next start",
+    "build": "next build",
+    "export": "next export",
+    "deploy": "gh-pages -d out",
+    "format": "prettier --write .",
+    "test": "jest"
+  },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
